--- a/src/html/blocks/about.html
+++ b/src/html/blocks/about.html
@@ -1,4 +1,4 @@
-<section class="about" id="about">
+<!-- <section class="about" id="about">
     <div class="container">
         <div class="about__flex">
             <div class="about__title-wrapper">
@@ -31,4 +31,47 @@
                     <p>✅ Высокая степень выявления угроз (AI и машинное обучение)</p>
             </div>                                          
         </div>
+</section> -->
+
+<section class="about" id="about">
+    <div class="container">
+        <div class="about__flex">
+            <div class="about__title-wrapper">
+                <h1 class="about__title" data-key="about-title">Надежная антивирусная защита <br> 
+                    <small class="about__title-small" data-key="about-title-small">для вашего бизнеса</small>
+                </h1>
+            </div>
+            <div class="about__desc">
+                <h2 class="about__product-title" data-key="product-title">"Trend Micro Worry-Free"</h2>
+                <div class="about__product-subtitle">
+                    <div class="animated-text">
+                        <span style="--delay:1" data-key="animated-1">Комплексная</span> 
+                        <span style="--delay:2" data-key="animated-2">защита</span> 
+                        <span style="--delay:3" data-key="animated-3">от</span> 
+                        <span style="--delay:4" data-key="animated-4">вирусов,</span> 
+                        <span style="--delay:5" data-key="animated-5">атак</span> 
+                        <span style="--delay:6" data-key="animated-6">и</span> 
+                        <span style="--delay:7" data-key="animated-7">программ-вымогателей.</span> 
+                        <span style="--delay:8" data-key="animated-8">Облачная</span> 
+                        <span style="--delay:9" data-key="animated-9">безопасность</span> 
+                        <span style="--delay:10" data-key="animated-10">без</span> 
+                        <span style="--delay:11" data-key="animated-11">нагрузки</span> 
+                        <span style="--delay:12" data-key="animated-12">на</span> 
+                        <span style="--delay:13" data-key="animated-13">систему.</span>
+                    </div>                       
+                </div>
+            </div>                
+        </div> 
+        <div class="about__consult">              
+            <p class="about__consult-text" data-key="consult-text">Получите консультацию по установке и защите уже сегодня!</p>
+            <div class="about__btns">
+                <a href="#cta" class="btn" data-key="consult-button">Получить консультацию</a>
+            </div>
+        </div>                
+        <div class="about__list">
+            <p data-key="feature-1">✅ Полная защита корпоративных устройств </p>
+            <p data-key="feature-2">✅ Централизованное управление и мониторинг</p>
+            <p data-key="feature-3">✅ Высокая степень выявления угроз (AI и машинное обучение)</p>
+        </div>                                          
+    </div>
 </section>
