--- a/src/html/blocks/benefits.html
+++ b/src/html/blocks/benefits.html
@@ -1,4 +1,4 @@
-<section class="benefits">
+<!-- <section class="benefits">
     <div class="container">    
         <h2 class="title-2">Преимущества Trend Micro Worry-Free</h2>
         <ul class="benefits__wrapper">
@@ -70,7 +70,90 @@
         </ul>
         
     </div>
+</section> -->
+<section class="benefits">
+    <div class="container">    
+        <h2 class="title-2" data-key="benefits-title">Преимущества Trend Micro Worry-Free</h2>
+        <ul class="benefits__wrapper">
+            <li class="benefits__item">
+                <div class="benefits__item-img">
+                    <svg class="icon icon--shield">
+                        <use href="./img/svgsprite/sprite.symbol.svg#cloud"></use>
+                    </svg>
+                </div>
+                <div class="benefits__icon-text">
+                    <div class="benefits__item-title">
+                        <p data-key="benefit-1-title">Облачное размещение</p>
+                    </div>
+                    <p class="benefits__item-desc" data-key="benefit-1-desc">
+                        Зашита не нагружает систему, всегда соответствует актуальной версии
+                    </p>
+                </div>
+            </li>
+            <li class="benefits__item">
+                <div class="benefits__item-img">
+                    <svg class="icon icon--emergency">
+                        <use href="./img/svgsprite/sprite.symbol.svg#siren"></use>
+                    </svg>
+                </div>
+                <div class="benefits__icon-text">
+                    <div class="benefits__item-title">
+                        <p data-key="benefit-2-title">Надежное выявление угроз</p>
+                    </div>
+                    <p class="benefits__item-desc" data-key="benefit-2-desc">
+                        Применяются ИИ и машинное обучение
+                    </p>
+                </div>
+            </li>
+            <li class="benefits__item">
+                <div class="benefits__item-img">
+                    <svg class="icon icon--control">
+                        <use href="./img/svgsprite/sprite.symbol.svg#tuning"></use>
+                    </svg>
+                </div>
+                <div class="benefits__icon-text">
+                    <div class="benefits__item-title">
+                        <p data-key="benefit-3-title">Удаленное управление</p>
+                    </div>
+                    <p class="benefits__item-desc" data-key="benefit-3-desc">
+                        Удобный контроль всех устройств
+                    </p>
+                </div>
+            </li>
+            <li class="benefits__item">
+                <div class="benefits__item-img">
+                    <svg class="icon icon--complex-protection">
+                        <use href="./img/svgsprite/sprite.symbol.svg#umbrella"></use>
+                    </svg>
+                </div>
+                <div class="benefits__icon-text">
+                    <div class="benefits__item-title">
+                        <p data-key="benefit-4-title">Комплексная защита</p>
+                    </div>
+                    <p class="benefits__item-desc" data-key="benefit-4-desc">
+                        От вирусов, фишинга, хакерских атак, вредоносного ПО
+                    </p>
+                </div>
+            </li>
+            <li class="benefits__item">
+                <div class="benefits__item-img">
+                    <svg class="icon icon--license">
+                        <use href="./img/svgsprite/sprite.symbol.svg#license"></use>
+                    </svg>
+                </div>
+                <div class="benefits__icon-text">
+                    <div class="benefits__item-title">
+                        <p data-key="benefit-5-title">Гибкие лицензии</p>
+                    </div>
+                    <p class="benefits__item-desc" data-key="benefit-5-desc">
+                        Лицензионные пакеты от 1 до 100 конечных точек
+                    </p>
+                </div>
+            </li>            
+        </ul>
+    </div>
 </section>
+
 
 
 
