--- a/src/html/blocks/footer.html
+++ b/src/html/blocks/footer.html
@@ -1,4 +1,4 @@
-<footer class="footer">
+<!-- <footer class="footer">
     <div class="container">
         <div class="footer__row">
             <div class="footer__left-side">
@@ -21,4 +21,28 @@
             </div>
         </div>
     </div>
+</footer> -->
+<footer class="footer">
+    <div class="container">
+        <div class="footer__row">
+            <div class="footer__left-side">
+                <div class="footer__data">
+            
+                    <div class="h3 title-3" data-key="footer-company-name">
+                        "N SERVICE", SIA
+                    </div><br>
+                    <p> <span data-key="footer-company-registration" >Рег. номер: 40203287886</span><br><br>
+                        <span data-key="footer-company-address">Адрес: Рига, ул. Русес 26-135, LV-1029, Латвия</span><br><br>                    
+                        <a href="mailTo:service@nservice.lv">service@nservice.lv</a> 
+                        <br>                                            
+                        <a href="https://nservice.lv/" target="_blank">www.nservice.lv</a>
+                    </p>
+                </div>
+            </div>
+            <div class="footer__right-side">
+                <p class="footer__copyright">Copyright © 2025. <span data-key="footer-rights">Все права защищены</span></p>
+            </div>
+        </div>
+    </div>
 </footer>
+
