--- a/src/html/blocks/header.html
+++ b/src/html/blocks/header.html
@@ -8,8 +8,8 @@
                 <ul class="nav__list">
                     <li><a href="#about" data-key="about-us" class="active hover-underline-animation center">О нас</a>
                     </li>
-                    <li><a href="#trendmicro" data-key="brands" class="hover-underline-animation center">trendmicro</a></li>
-                    <li><a href="#howtobuy" data-key="for-clients" class="hover-underline-animation center">купить</a></li>
+                    <li><a href="#trendmicro" data-key="product" class="hover-underline-animation center">trendmicro</a></li>
+                    <li><a href="#howtobuy" data-key="howtobuy" class="hover-underline-animation center">купить</a></li>
                     <li><a href="#cta" data-key="contacts" class="hover-underline-animation center">Контакты</a>
                     </li>
                 </ul>
@@ -30,4 +30,6 @@
         </div>
     </div>
 </header>
+
+
 @@include('mobile-nav.html')
