--- a/src/html/blocks/partners.html
+++ b/src/html/blocks/partners.html
@@ -1,7 +1,7 @@
 <section class="partners" id="partners">
     <div class="container">
         <div class="partners-wrapper">
-            <h2 class="title-2">партнеры</h2>
+            <h2 class="title-2" data-key="partners-title">партнеры</h2>
             <div class="partners-box">
                 <div class="partners__gallery">
                     <a href="https://www.via-una.lv" class="partner" target="_blank">
