--- a/src/html/blocks/video.html
+++ b/src/html/blocks/video.html
@@ -1,4 +1,4 @@
-<section class="video" id="trendmicro">
+<!-- <section class="video" id="trendmicro">
     <h2 class="visually-hidden">title</h2>
     <div class="container">
         <div class="video__wrapper">
@@ -6,6 +6,20 @@
                 <h2 class="title-2">trend micro: <small>видеописание</small></h2>
             </div>
             <iframe class="video__frame"  height="600" src="https://www.youtube.com/embed/Dh6K9DTlPvM" title="YouTube video player" style="border: none;" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        </div>
+    </div>
+</section> -->
+
+<section class="video" id="trendmicro">
+    <h2 class="visually-hidden" data-key="video-hidden-title">title</h2>
+    <div class="container">
+        <div class="video__wrapper">
+            <div class="video__title">
+                <h2 class="title-2"> <span data-key="video-title">trend micro: </span>
+                    <small data-key="video-subtitle">видеописание</small>
+                </h2>
+            </div>
+            <iframe class="video__frame" height="600" src="https://www.youtube.com/embed/Dh6K9DTlPvM" title="YouTube video player" style="border: none;" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </div>
     </div>
 </section>
