--- a/src/html/blocks/why.html
+++ b/src/html/blocks/why.html
@@ -1,4 +1,4 @@
-<section class="why">
+<!-- <section class="why">
     <div class="container">
         <div class="why__header">
             <img class="logo-square" src="./../../img/logo_square.jpg" srcset="./../../img/logo_square@2x.jpg" alt="logo">
@@ -60,6 +60,71 @@
                         </li>
                     </ul>                    
                 </div>             </div>
+        </div>
+    </div>
+</section> -->
+
+<section class="why">
+    <div class="container">
+        <div class="why__header">
+            <img class="logo-square" src="./../../img/logo_square.jpg" srcset="./../../img/logo_square@2x.jpg" alt="logo">
+            <h2 class="title-2 why__title" data-key="why-title">Почему N SERVICE?</h2>
+        </div>        
+        <div class="why__wrapper">            
+            <div class="why__desc">
+                <p data-key="why-description">
+                    Выбирая N SERVICE, вы приобретаете не только высококачественный антивирус, но и всестороннюю сервисную поддержку опытной команды профессионалов. Компания N Service работает на рынке IT-услуг с 2020 года. Её "коэффициент удержания клиентов" составляет 85%, что превосходит средний показатель почти на 5%.
+                </p>
+            </div>            
+        </div>
+        
+        <div class="why__list">
+            <h3 class="title-3" data-key="why-clients-get">Клиенты N SERVICE получают:</h3>
+
+            <div class="why__list-item">
+                <h4 class="item-title title-4" data-key="why-item1-title">1. Расширенное предложение</h4>
+                <p class="item-subtitle" data-key="why-item1-subtitle">Помимо самого антивируса, в пакет услуг для клиентов N SERVICE входит:</p>
+                <ul>
+                    <li><p data-key="why-item1-point1">Антивирусное ПО под индивидуальные потребности вашего бизнеса;</p></li>
+                    <li><p data-key="why-item1-point2">Постоянная техническая поддержка;</p></li>
+                    <li><p data-key="why-item1-point3">Аудит безопасности, с выявлением и устранением потенциальных уязвимостей в вашей IT-структуре.</p></li>
+                </ul>                
+            </div>
+
+            <div class="why__list-item">
+                <h4 class="item-title title-4" data-key="why-item2-title">2. Опыт компании</h4>
+                <p class="item-subtitle" data-key="why-item2-subtitle">N SERVICE обладает многолетней практикой в сфере кибербезопасности.</p>
+                <p class="Why__link" data-key="why-item2-link">
+                    В подтверждение можем предоставить конкретные кейсы своего практического опыта, а также <a href="#partners" data-key="why-item2-link-inner">отзывы сотрудничающих с нами компаний.</a>
+                </p>                    
+            </div>
+
+            <div class="why__list-item">
+                <h4 class="item-title title-4" data-key="why-item3-title">3. Бонусы N SERVICE</h4>
+                <div class="bonus__wrapper">
+                    <p class="item-subtitle" data-key="why-item3-subtitle">При покупке антивируса через N SERVICE, наши клиенты получают ряд дополнительных преимуществ:</p>
+                    <ul class="bonus__list">
+                        <li class="bonus__list-item" >
+                            <svg class="icon--gift1">
+                                <use href="./img/svgsprite/stack/svg/sprite.stack.svg#gift1"></use>
+                            </svg>
+                            <span data-key="why-bonus1">Бесплатная установка антивируса</span>
+                        </li>
+                        <li class="bonus__list-item" >
+                            <svg class="icon--gift2">
+                                <use href="./img/svgsprite/stack/svg/sprite.stack.svg#gift2"></use>
+                            </svg>
+                            <span data-key="why-bonus2">Скидки на обновления и услуги для постоянных клиентов</span>
+                        </li>
+                        <li class="bonus__list-item" >
+                            <svg class="icon--gift3">
+                                <use href="./img/svgsprite/stack/svg/sprite.stack.svg#gift3"></use>
+                            </svg>
+                            <span data-key="why-bonus3">Бесплатные консультации экспертов по выбору оптимальных решений защиты</span>
+                        </li>
+                    </ul>                    
+                </div>
+            </div>
         </div>
     </div>
 </section>
