--- a/src/html/blocks/header.html
+++ b/src/html/blocks/header.html
@@ -20,7 +20,7 @@
                 <label class="switcher" for="lang-lv">LV</label>
                 <input type="radio" name="language" value="en" id="lang-eng" />
                 <label class="switcher" for="lang-eng">EN</label>
-                <input type="radio" name="language" value="ru" id="lang-ru" checked />
+                <input type="radio" name="language" value="ru" id="lang-ru" />
                 <label class="switcher" for="lang-ru">RU</label>
                 <span class="lang-placeholder"></span>
             </div>
