--- a/src/html/index.html
+++ b/src/html/index.html
@@ -16,7 +16,8 @@
 	<link rel="icon" type="image/png" sizes="16x16" href="./../img/favicons/favicon-16x16.png">
 	<link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
 	<link rel="manifest" href="./../img/favicons/site.webmanifest">
-	
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/intl-tel-input/17.0.8/css/intlTelInput.min.css">
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/intl-tel-input/17.0.8/js/intlTelInput.min.js"></script>
 	<script src="https://www.google.com/recaptcha/api.js" async defer></script>
 </head>
 
