--- a/src/html/blocks/agreement-bar.html
+++ b/src/html/blocks/agreement-bar.html
@@ -4,7 +4,7 @@
         <span data-key="agreement-header">Мы ценим вашу приватность</span>
     </div>
         
-            <p > <span data-key="agreement-text">Мы используем файлы cookie, чтобы улучшить качество ваших просмотров, персонализируя для вас рекламу и контент на основе анализа трафика. Нажимая "Принять", вы соглашаетесь с использованием файлов cookie.</span><a data-key="agreement-link" href="./../../files/agreement-nservice_lv_en_ru" target="_blank">Политика сookie.</a>                     
+            <p > <span data-key="agreement-text">Мы используем файлы cookie, чтобы улучшить качество ваших просмотров, персонализируя для вас рекламу и контент на основе анализа трафика. Нажимая "Принять", вы соглашаетесь с использованием файлов cookie.</span><a data-key="agreement-link" href="./../../files/agreement-nservice_lv_en_ru.pdf" target="_blank">Политика сookie.</a>                     
             </p>                                   
         
             <button data-key="accept-btn" class="accept-btn" id="accept">Принять</button>
