--- a/src/html/blocks/cta.html
+++ b/src/html/blocks/cta.html
@@ -50,7 +50,7 @@
                     <input id="formAgreement" type="checkbox" name="agreement" class="checkbox__input _req " data-key="form-agreement">
                     <label for="formAgreement" class="checkbox__label" >
                         <span class="checkbox__box-span">
-                            <span data-key="users-agreement-1">Я принимаю условия </span><a data-key="policy-link" href="./../../files/agreement-nservice_lv_en_ru" target="_blank">политики конфиденциальности </a><span data-key="users-agreement-2">компании и даю согласие на обработку своих персональных данных.
+                            <span data-key="users-agreement-1">Я принимаю условия </span><a data-key="policy-link" href="./../../files/agreement-nservice_lv_en_ru.pdf" target="_blank">политики конфиденциальности </a><span data-key="users-agreement-2">компании и даю согласие на обработку своих персональных данных.
                             </span>
                         </span>                                                           
                     </label>
